@@ -1,4 +1,4 @@
 DIST stardict-dicts.exe 72478164 RMD160 6aaac63b08851874d0d1cc0f9586e3ea79e9f2f4 SHA1 ecdde44e7e77d17d71f6eafbb68870347d72c9b4 SHA256 5097cb44f0ce3914b1c13898c8623abd067361f72642b2dfb9b3fb8572549403
-EBUILD stardict-ruspack-0.2-r1.ebuild 571 RMD160 78bce2713eda47b3616ce8e192fa712f7c996898 SHA1 a135a2a9d8830469af95ebb032813343ad28adc3 SHA256 cd007d2e452cee2d79123deeee264a77cb605ced9e63514bae2943988e804268
-MISC ChangeLog 437 RMD160 4fcf25f4618b31ccf92855a73ce3286d52cf73bf SHA1 76c2b4d73248e2a42f575e4ba9c98b3ef21771d5 SHA256 1cbea87dc8d94e816472752c7f7e6d3a64bff7b40be8dc72a7cd4c88eca7f2eb
+EBUILD stardict-ruspack-0.2-r1.ebuild 570 RMD160 377be89a8c9abe77c4ca989f4224c0084274ca89 SHA1 63afd74ea69a6793d31dffde848c54146880164d SHA256 52745b882bde83f51bf209e430069e2131b92ec58f9cbc139034358bb359f9d3
+MISC ChangeLog 563 RMD160 45b251aef7d6ca42f32e518eceb20cfef074bf62 SHA1 25c003d68e185f100d0db7c050f80216f2626823 SHA256 b85c1b6180809fe3833b4ca3139b3eb809200a54b0b01f4d9800559102353151
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
