@@ -1,6 +1,9 @@
 # ChangeLog for app-dicts/stardict-ruspack
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Feb 2010; Peter Volkov <pva@gentoo.org> stardict-ruspack-0.2-r1.ebuild:
+  app-dict/stardict moved to app-text/stardict.
 
   22 Nov 2008; Isakov_AN <satana.hell@gmail.com>
   -stardict-ruspack-0.2.ebuild, +stardict-ruspack-0.2-r1.ebuild:
